...

  func setup() {
    ingredientsHeader.text = "ingredients".localized(nil) + ":"
    instructionsHeader.text = "instructions".localized(nil) + ":"
    sourceButton.setTitle(" \("source".localized(nil))", for: .normal)

    favoriteButton.accessibilityIdentifier = "favButton"
  }

  func setFavoriteButton() {
    let favImage = presenter.meal.favorited ? "heart.fill" : "heart"
    favoriteButton.setImage(UIImage(systemName: favImage), for: .normal)
  }
...
